--- a/src/estilos/BarraDeNavegacion.css
+++ b/src/estilos/BarraDeNavegacion.css
@@ -1,7 +1,8 @@
-.nav-enlace-horizontal {
-    color: white;
+#boton_de_despliegue {
+    background-color: rgb(0, 178, 148);
+    margin-right: 2em;
 }
 
-#div-contenedor {
-    width: auto;
+.active {
+    color: rgb(26, 159, 255) !important;
 }
