--- a/src/estilos/BarraDeNavegacion.css
+++ b/src/estilos/BarraDeNavegacion.css
@@ -1,4 +1,3 @@
-#boton_de_despliegue {
-    background-color: rgb(0, 178, 148);
-    margin-right: 2em;
+.navbar-toggler {
+    background-color: rgb(26, 159, 255);
 }
