--- a/src/estilos/Carrusel.css
+++ b/src/estilos/Carrusel.css
@@ -1,20 +1,27 @@
-.carousel {
-    display: flex;
-    overflow-x: scroll;
+.game-library {
     padding: 20px;
   }
   
-.carousel-item {
-    margin-right: 15px;
-    width: 200px;
+.game-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 20px;
   }
   
-.carousel-item img {
+.game-card {
+    text-align: center;
+  }
+  
+.game-card img {
     width: 100%;
     border-radius: 8px;
   }
   
-.carousel-item h2 {
-    text-align: center;
-    color: #333;
+.game-card .tittle {
+    color: #ffffff;
   }
+  
+.game-card p {
+    color: #666;
+  }
+  
