--- a/src/estilos/Carrusel.css
+++ b/src/estilos/Carrusel.css
@@ -1,4 +1,5 @@
 .game-library {
+  justify-content: left;
     padding: 20px;
   }
   
@@ -13,11 +14,13 @@
   }
   
 .game-card img {
+    flex: 1;
     width: 100%;
     border-radius: 8px;
   }
   
 .game-card .tittle {
+    flex: 8;
     color: #ffffff;
   }
   
